added german translation and A2 format
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31395 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin.properties
@@ -56,10 +56,12 @@ styleAction.label = Change Style
 
 A4.landscape.template=A4 landscape template
 A3.landscape.template=A3 landscape template
+A2.landscape.template=A2 landscape template
 A1.landscape.template=A1 landscape template
 A0.landscape.template=A0 landscape template
 A4.portrait.template=A4 portrait template
 A3.portrait.template=A3 portrait template
+A2.portrait.template=A2 portrait template
 A1.portrait.template=A1 portrait template
 A0.portrait.template=A0 portrait template
 Letter.landscape.template=Letter landscape template
