--- a/plugins/net.refractions.udig.project.ui.editor/plugin.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin.properties
@@ -135,6 +135,7 @@ info.tools.name    = &Info Tools
 information = &Information
 
 layer.crs.propertypage  = Projection
+map.new.label			= New &Map
 layer.new.label         = New &Layer
 layer.preferences.name  = Layer
 
