--- a/extras/org.apache.maven-ant-tasks/.classpath
+++ b/extras/org.apache.maven-ant-tasks/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/maven-ant-tasks-2.0.10.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/maven-ant-tasks-2.0.9.jar" sourcepath="org.apache.macen_ant_taskssrc.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
