--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -45,7 +45,7 @@ bin.includes = library.jar,\
                lib/gt-cql-2.6-SNAPSHOT.jar,\
                lib/gt-data-2.6-SNAPSHOT.jar,\
                lib/gt-db2-2.6-SNAPSHOT.jar,\
-               lib/gt-epsg-hsql-2.6-SNAPSHOT.jar,\
+               lib/gt-epsg-h2-2.6-SNAPSHOT.jar,\
                lib/gt-geotiff-2.6-SNAPSHOT.jar,\
                lib/gt-gml-2.6-SNAPSHOT.jar,\
                lib/gt-graph-2.6-SNAPSHOT.jar,\
@@ -76,7 +76,7 @@ bin.includes = library.jar,\
                lib/gt-xsd-ows-2.6-SNAPSHOT.jar,\
                lib/gt-xsd-wfs-2.6-SNAPSHOT.jar,\
                lib/gt-xsd-wps-2.6-SNAPSHOT.jar,\
-               lib/hsqldb-1.8.0.7.jar,\
+               lib/h2-1.1.104.jar,\
                lib/imageio-ext-arcgrid-1.0.3.jar,\
                lib/imageio-ext-customstreams-1.0.3.jar,\
                lib/imageio-ext-gdal-bindings-1.4.5.jar,\
@@ -102,6 +102,7 @@ bin.includes = library.jar,\
                lib/jsr-275-1.0-beta-2.jar,\
                lib/jsr305-1.3.2.jar,\
                lib/jts-1.10.jar,\
+               lib/miglayout-3.7.jar,\
                lib/mysql-connector-java-5.1.5.jar,\
                lib/net.opengis.ows-2.6-SNAPSHOT.jar,\
                lib/net.opengis.wfs-2.6-SNAPSHOT.jar,\
@@ -114,8 +115,7 @@ bin.includes = library.jar,\
                lib/xml-apis-1.0.b2.jar,\
                lib/xml-apis-xerces-2.7.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar,\
-               lib/miglayout-3.7.jar
+               lib/xpp3-1.1.3.4.O.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
