--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -42,7 +42,6 @@ bin.includes = library.jar,\
                lib/gt-coverage-2.6-SNAPSHOT.jar,\
                lib/gt-cql-2.6-SNAPSHOT.jar,\
                lib/gt-data-2.6-SNAPSHOT.jar,\
-               lib/gt-db2-2.6-SNAPSHOT.jar,\
                lib/gt-epsg-h2-2.6-SNAPSHOT.jar,\
                lib/gt-geotiff-2.6-SNAPSHOT.jar,\
                lib/gt-graph-2.6-SNAPSHOT.jar,\
@@ -109,7 +108,8 @@ bin.includes = library.jar,\
                lib/postgresql-8.4-701.jdbc3.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/gt-jdbc-db2-2.6-SNAPSHOT.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
