--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -109,7 +109,8 @@ bin.includes = library.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xmlrpc-2.0.jar,\
                lib/xpp3-1.1.3.4.O.jar,\
-               lib/gt-jdbc-db2-2.6-SNAPSHOT.jar
+               lib/gt-jdbc-db2-2.6-SNAPSHOT.jar,\
+               epsg/
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
