--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -8,6 +8,7 @@ bin.includes = library.jar,\
                LICENSE.txt,\
                plugin_ko.properties,\
                epsg.properties,\
+               epsg/,\
                lib/batik-awt-util-1.6.jar,\
                lib/batik-bridge-1.6.jar,\
                lib/batik-css-1.6.jar,\
@@ -24,10 +25,7 @@ bin.includes = library.jar,\
                lib/commons-codec-1.2.jar,\
                lib/commons-collections-3.1.jar,\
                lib/commons-dbcp-1.2.2.jar,\
-               lib/commons-httpclient-3.1.jar,\
                lib/commons-jxpath-1.2.jar,\
-               lib/commons-lang-2.1.jar,\
-               lib/commons-logging-1.0.3.jar,\
                lib/commons-pool-1.3.jar,\
                lib/eastwood-1.1.1-SNAPSHOT.jar,\
                lib/geoapi-2.3-SNAPSHOT.jar,\
@@ -49,6 +47,7 @@ bin.includes = library.jar,\
                lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar,\
                lib/gt-imagemosaic-2.6-SNAPSHOT.jar,\
                lib/gt-jdbc-2.6-SNAPSHOT.jar,\
+               lib/gt-jdbc-db2-2.6-SNAPSHOT.jar,\
                lib/gt-main-2.6-SNAPSHOT.jar,\
                lib/gt-metadata-2.6-SNAPSHOT.jar,\
                lib/gt-mysql-2.6-SNAPSHOT.jar,\
@@ -108,9 +107,7 @@ bin.includes = library.jar,\
                lib/postgresql-8.4-701.jdbc3.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar,\
-               lib/gt-jdbc-db2-2.6-SNAPSHOT.jar,\
-               epsg/
+               lib/xpp3-1.1.3.4.O.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
