--- a/tutorials/net.refractions.udig.tests.tutorials.tests/.project
+++ b/tutorials/net.refractions.udig.tests.tutorials.tests/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.refractions.udig.tests.catalog.csv</name>
+	<name>net.refractions.udig.tutorials.tests</name>
 	<comment></comment>
 	<projects>
 	</projects>
