--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -107,7 +107,8 @@ bin.includes = library.jar,\
                lib/postgresql-8.4-701.jdbc3.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/joda-time-1.6.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
