--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -8,7 +8,6 @@ bin.includes = library.jar,\
                LICENSE.txt,\
                plugin_ko.properties,\
                epsg.properties,\
-               epsg/,\
                lib/batik-awt-util-1.6.jar,\
                lib/batik-bridge-1.6.jar,\
                lib/batik-css-1.6.jar,\
@@ -47,12 +46,13 @@ bin.includes = library.jar,\
                lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar,\
                lib/gt-imagemosaic-2.6-SNAPSHOT.jar,\
                lib/gt-jdbc-2.6-SNAPSHOT.jar,\
+               lib/gt-jdbc-core-2.6-SNAPSHOT.jar,\
                lib/gt-jdbc-db2-2.6-SNAPSHOT.jar,\
+               lib/gt-jdbc-mysql-2.6-SNAPSHOT.jar,\
+               lib/gt-jdbc-oracle-2.6-SNAPSHOT.jar,\
+               lib/gt-jdbc-postgis-2.6-SNAPSHOT.jar,\
                lib/gt-main-2.6-SNAPSHOT.jar,\
                lib/gt-metadata-2.6-SNAPSHOT.jar,\
-               lib/gt-mysql-2.6-SNAPSHOT.jar,\
-               lib/gt-oracle-spatial-2.6-SNAPSHOT.jar,\
-               lib/gt-postgis-2.6-SNAPSHOT.jar,\
                lib/gt-process-2.6-SNAPSHOT.jar,\
                lib/gt-referencing-2.6-SNAPSHOT.jar,\
                lib/gt-render-2.6-SNAPSHOT.jar,\
@@ -92,6 +92,7 @@ bin.includes = library.jar,\
                lib/jcommon-1.0.16.jar,\
                lib/jdom-1.0.jar,\
                lib/jfreechart-1.0.13.jar,\
+               lib/joda-time-1.6.jar,\
                lib/jsqlparser-0.3.14.jar,\
                lib/jsr-275-1.0-beta-2.jar,\
                lib/jsr305-1.3.2.jar,\
@@ -103,12 +104,10 @@ bin.includes = library.jar,\
                lib/net.opengis.wps-2.6-SNAPSHOT.jar,\
                lib/org.w3.xlink-2.6-SNAPSHOT.jar,\
                lib/picocontainer-1.2.jar,\
-               lib/postgis-driver-1.0.jar,\
                lib/postgresql-8.4-701.jdbc3.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar,\
-               lib/joda-time-1.6.jar
+               lib/xpp3-1.1.3.4.O.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
