--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-css-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-dom-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-ext-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-gvt-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-parser-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-script-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-svg-dom-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-transcoder-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-util-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-xml-1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-css-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-dom-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-ext-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-gvt-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-parser-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-script-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-svg-dom-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-svggen-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-transcoder-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-util-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/batik-xml-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.1.jar"/>
@@ -19,6 +21,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-jxpath-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/eastwood-1.1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/fop-0.94.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
@@ -98,6 +101,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/vecmath-1.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xalan-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmlgraphics-commons-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.3.4.O.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
