--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -108,12 +108,12 @@ bin.includes = library.jar,\
                lib/org.w3.xlink-2.6-SNAPSHOT.jar,\
                lib/picocontainer-1.2.jar,\
                lib/postgresql-8.4-701.jdbc3.jar,\
-               lib/vecmath-1.3.1.jar,\
                lib/xalan-2.6.0.jar,\
                lib/xml-apis-ext-1.3.04.jar,\
                lib/xmlgraphics-commons-1.2.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/vecmath-1.3.2.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
