--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-client-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ws-commons-util-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-common-3.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.7.jar"/>
@@ -104,10 +110,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/xalan-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlgraphics-commons-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.3.4.O.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
