--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -112,8 +112,10 @@ bin.includes = library.jar,\
                lib/xalan-2.6.0.jar,\
                lib/xml-apis-ext-1.3.04.jar,\
                lib/xmlgraphics-commons-1.2.jar,\
-               lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/ws-commons-util-1.0.1.jar,\
+               lib/xmlrpc-common-3.0.jar,\
+               lib/xmlrpc-client-3.0.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
