FOR: http://jira.codehaus.org/browse/UDIG-1559 removed Alternate Map Perspective and added new StylePerspective
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31488 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.xml
+++ b/plugins/net.refractions.udig.printing.ui/plugin.xml
@@ -196,7 +196,7 @@
             <perspectiveExtension targetID="net.refractions.udig.ui.mapPerspective">
                <actionSet id="net.refractions.udig.printing.ui.mapGraphic.action"/>
             </perspectiveExtension>
-            <perspectiveExtension targetID="net.refractions.udig.ui.alternateMapPerspective">
+            <perspectiveExtension targetID="net.refractions.udig.ui.stylePerspective">
                <actionSet id="net.refractions.udig.printing.ui.mapGraphic.action"/>
             </perspectiveExtension>
          </extension>
