--- a/plugins/net.refractions.udig.legend/plugin.xml
+++ b/plugins/net.refractions.udig.legend/plugin.xml
@@ -55,7 +55,7 @@
    </extension>
       <extension
             point="org.eclipse.ui.perspectiveExtensions">
-         <perspectiveExtension targetID="net.refractions.udig.ui.alternateMapPerspective">
+         <perspectiveExtension targetID="net.refractions.udig.ui.stylePerspective">
             <actionSet id="net.refractions.udig.legend.mapGraphic.action"/>
          </perspectiveExtension>
          <perspectiveExtension targetID="net.refractions.udig.ui.mapPerspective">
