--- a/plugins/net.refractions.udig.location/plugin.xml
+++ b/plugins/net.refractions.udig.location/plugin.xml
@@ -24,7 +24,7 @@
                standalone="true"
                visible="false"/>
       </perspectiveExtension>
-      <perspectiveExtension targetID="net.refractions.udig.ui.alternateMapPerspective">
+      <perspectiveExtension targetID="net.refractions.udig.ui.stylePerspective">
          <viewShortcut id="net.refractions.udig.location.view"/>
          <view
                closeable="true"
