--- a/plugins/net.refractions.udig.tool.edit/plugin.xml
+++ b/plugins/net.refractions.udig.tool.edit/plugin.xml
@@ -458,7 +458,7 @@
             <perspectiveExtension targetID="net.refractions.udig.ui.mapPerspective">
                <actionSet id="net.refractions.udig.tools.edit.mapGraphic.action"/>
             </perspectiveExtension>
-            <perspectiveExtension targetID="net.refractions.udig.ui.alternateMapPerspective">
+            <perspectiveExtension targetID="net.refractions.udig.ui.stylePerspective">
                <actionSet id="net.refractions.udig.tools.edit.mapGraphic.action"/>
             </perspectiveExtension>
          </extension>
