--- a/plugins/net.refractions.udig.ui/plugin.properties
+++ b/plugins/net.refractions.udig.ui/plugin.properties
@@ -18,7 +18,7 @@ UpdateActionSet.updates.label       = &Find and Install...
 
 add.label = &Add ...
 
-alternate.perspective.name = Alternate Map Perspective
+style.perspective.name = Style Perspective
 
 antialiasing.tip.name = Turning on Anti-Aliasing
 antialiasing.tip.tip  = You can turn on anti-aliasing(for better looking maps) in the Rendering Preferences.
