Reverted back BasicGridCoverageRenderer (and renamed) to include also image mosaic, which was broken. Added image mosaic import wizard. Jody is in the meanwhile creating a parallel one for Loader.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31497 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.imageio/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.imageio/plugin.xml
@@ -32,6 +32,17 @@
             name="NITF"/>                                                 
                                             
    </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <wizard
+            class="net.refractions.udig.catalog.imageio.mosaicwizard.MosaicImportWizard"
+            id="eu.hydrologis.jgrass.dxfdwg.wizard.DxfImportWizard"
+            name="Import imagery folder as mosaic">
+         <description>
+            Import a dxf file converting it to shapefile into the workspace.
+         </description>
+      </wizard>
+   </extension>
 
 
 </plugin>
