Added gridcoverage loader class for renderer, eliminated basic one
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31498 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.rasterings/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.rasterings/plugin.xml
@@ -11,6 +11,9 @@
          </resolve>
          <resolve
                type="org.geotools.coverage.grid.io.AbstractGridCoverage2DReader">
+         </resolve>
+         <resolve
+               type="net.refractions.udig.catalog.rasterings.GridCoverageLoader">
          </resolve>         
       </factory>
    </extension>
