--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -28,7 +28,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/library/jdbc"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6.0.jar"/>
