Added preference page for mouse double click speed
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31507 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin.properties
@@ -220,6 +220,8 @@ style.preferences.name = Style
 tool.point            = tool
 tool.preferences.name = Tool
 
+tool.mouse.preferences.name = Mouse
+
 urlWizard.description = Imports a URL into the catalog
 urlWizard.name        = Open URL
 
