German translations for UDig1.2 RC1
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31509 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.mapgraphic/plugin.xml
+++ b/plugins/net.refractions.udig.mapgraphic/plugin.xml
@@ -136,12 +136,12 @@
             class="net.refractions.udig.mapgraphic.northarrow.NorthArrowMapGraphic"
             icon="icons/obj16/graphic_obj.gif"
             id="net.refractions.udig.mapgraphic.NorthArrowMapGraphic"
-            name="North Arrow">
+            name="%mapgraphic.northarrow.name">
       </mapGraphic>
       <mapGraphic
             class="net.refractions.udig.mapgraphic.scalebar.ScaleDenomMapGraphic"
             id="net.refractions.udig.mapgraphic.scalebar.ScaleDenomMapGraphic"
-            name="Scale Denominator">
+            name="%mapgraphic.scale.name">
       </mapGraphic>
    </extension>
    <!--
