--- a/plugins/net.refractions.udig.project.ui/plugin.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin.properties
@@ -1,6 +1,8 @@
 
 Add.Category = Selection
 
+AddToMap = Add to Map
+
 CRS = Custom...
 
 Feature.Category        = Feature
@@ -11,6 +13,7 @@ FilterDropAction.name = Filter Drop
 Layer.Category           = Layer
 Layer.Modify.Category    = Modify Layer
 Layer.Name               = Layer
+Layer.SetMapProjection   = Set Map Projection From Layer
 Layer.properties.name    = Layer Properties
 Layer.properties.tooltip = Layer Properties and Settings
 
@@ -72,6 +75,7 @@ ProjectView = Projects
 SLDDrop.name = SLD Drag and Drop
 
 Selection.Category        = Selection
+Selection.MakeHole        = Make Hole
 Selection.Modify.Category = Modify Selection
 
 Tools = Tools
@@ -120,6 +124,9 @@ edit.tools.name    = &Edit Tools
 editorInputs.point = Editor Inputs
 
 export.name        = &Export
+
+exportProject.desc = Export selected project to specified location
+exportProject.name = Export Project
 
 exportToImage.desc = Exports selected maps to World+Image files or a PDF.  The exported images are added to the catalog.
 exportToImage.name = Map to Image
@@ -217,10 +224,9 @@ selectionExport.name = Layer to Shapefile
 
 style.preferences.name = Style
 
-tool.point            = tool
-tool.preferences.name = Tool
-
 tool.mouse.preferences.name = Mouse
+tool.point                  = tool
+tool.preferences.name       = Tool
 
 urlWizard.description = Imports a URL into the catalog
 urlWizard.name        = Open URL
