--- a/plugins/net.refractions.udig.tool.default/plugin.properties
+++ b/plugins/net.refractions.udig.tool.default/plugin.properties
@@ -1,35 +1,43 @@
-plugin.name=Tools Plug-in
 
-pan.tool.name=&Pan
-pan.tool.tooltip=Pan Map View
+FixedScalePan.name    = Fixed Scale Pan (tiling)
+FixedScalePan.tooltip = Fixed Scale Pan
 
-zoom.tool.name=&Zoom
-zoom.tool.tooltip=Adjust Current Zoom
-zoom.all.name=Show &All
-zoom.all.tooltip=Show All Data
+ScrollPanTool.name    = Scroll Pan Tool (tiling)
+ScrollPanTool.tooltip = Pan using SWT Scroll
 
-refresh.name=&Redraw
-refresh.tooltip=Redraw Map 
-cancel.name=&Stop
-cancel.tooltip=Stop Drawing
+cancel.name    = &Stop
+cancel.tooltip = Stop Drawing
 
-pan.right.name=Pan Right
-pan.left.name=Pan Left
-pan.up.name=Pan Up
-pan.down.name=Pan Down
+commit.name    = &Commit
+commit.tooltip = Commit Changes
 
-zoomout.name=Zoom &Out
-zoomout.tooltip=Zoom Out
-zoomin.name=Zoom &In
-zoomin.tooltip=Zoom In
+cursorPosition.name = Cursor Position
 
-commit.name=&Commit
-commit.tooltip=Commit Changes
-rollback.name=&Rollback
-rollback.tooltip=Rollback Changes
+pan.down.name    = Pan Down
+pan.left.name    = Pan Left
+pan.right.name   = Pan Right
+pan.tool.name    = &Pan
+pan.tool.tooltip = Pan Map View
+pan.up.name      = Pan Up
 
-cursorPosition.name=Cursor Position
+plugin.name = Tools Plug-in
 
-zoom.command.all.name=Show All
-zoom.command.in.name=Show in
-zoom.command.out.name=Show out
+refresh.name    = &Redraw
+refresh.tooltip = Redraw Map 
+
+rollback.name    = &Rollback
+rollback.tooltip = Rollback Changes
+
+zoom.all.name         = Show &All
+zoom.all.tooltip      = Show All Data
+zoom.command.all.name = Show All
+zoom.command.in.name  = Show in
+zoom.command.out.name = Show out
+zoom.tool.name        = &Zoom
+zoom.tool.tooltip     = Adjust Current Zoom
+
+zoomin.name    = Zoom &In
+zoomin.tooltip = Zoom In
+
+zoomout.name    = Zoom &Out
+zoomout.tooltip = Zoom Out
