--- a/plugins/net.refractions.udig.catalog.ui/plugin.properties
+++ b/plugins/net.refractions.udig.catalog.ui/plugin.properties
@@ -1,28 +1,49 @@
-Search=Search
-search.description=Search view is used to search for geographic information.
-Catalog=Catalog
-catalog.description=Catalog view allows interaction with known data sources.
-Provider=Jody Garnett, Refractions Research, Inc.
-plugin.name="Catalog UI Plug-in"
-countOp.tooltip=Counts Features in the selection
-wizard.fileopen.name=Files
-wizard.fileopen.description=Open one or more files
-wizard.filechooser.name=File Chooser
-wizard.filechooser.description=Choose one or more files
-dataImportWizard.name=Data
-resetService.label=Reset
-resetService.tooltip=Reset service, uncommited changes will be lost
-newFeatureType=Create Feature Type
-catalog.preferences.name=Catalog
-newlayer=Blank In-Memory
-description=Create a new in-memory service
-layerExport.name = Resource to Shapefile
-layerExport.desc = Export all the features in a layer/resource.  The new layer is added to the catalog for later use.
 
-import.action.name=Catalog Import Drag and Drop
-data.name=Data
-data.tooltip=Interaction with data sources
-Service.Properties.Name=Service Properties
-Service.Properties.Tooltip=Properties for this Service
-Resource.Category=Resource
-Service.Category=Service
+AddFeatureType = Add Feature Type
+
+Catalog = Catalog
+
+Provider = Jody Garnett, Refractions Research, Inc.
+
+Reshape = Reshape
+
+Resource.Category = Resource
+
+Search = Search
+
+Service.Category           = Service
+Service.Properties.Name    = Service Properties
+Service.Properties.Tooltip = Properties for this Service
+
+catalog.description      = Catalog view allows interaction with known data sources.
+catalog.preferences.name = Catalog
+
+countOp.tooltip = Counts Features in the selection
+
+data.name             = Data
+data.tooltip          = Interaction with data sources
+
+dataImportWizard.name = Data
+
+description = Create a new in-memory service
+
+import.action.name = Catalog Import Drag and Drop
+
+layerExport.desc = Export all the features in a layer/resource.  The new layer is added to the catalog for later use.
+layerExport.name = Resource to Shapefile
+
+newFeatureType = Create Feature Type
+
+newlayer = Blank In-Memory
+
+plugin.name = "Catalog UI Plug-in"
+
+resetService.label   = Reset
+resetService.tooltip = Reset service, uncommited changes will be lost
+
+search.description = Search view is used to search for geographic information.
+
+wizard.filechooser.description = Choose one or more files
+wizard.filechooser.name        = File Chooser
+wizard.fileopen.description    = Open one or more files
+wizard.fileopen.name           = Files
