--- a/plugins/net.refractions.udig.catalog.ui/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.ui/plugin.xml
@@ -357,7 +357,7 @@
            class="net.refractions.udig.catalog.internal.ui.ops.NewFeatureTypeOp"
            enablesFor="1"
            id="net.refractions.udig.catalog.ui.addFeatureType"
-           name="Add Feature Type"
+           name="%AddFeatureType"
            targetClass="net.refractions.udig.catalog.IService">
         <enablement>
            <adaptsTo target="org.geotools.data.DataStore"/>
@@ -367,7 +367,7 @@
              categoryId="net.refractions.udig.catalog.ui.operation.resourceCategory"
              class="net.refractions.udig.catalog.ui.operation.ReshapeOperation"
              id="net.refractions.udig.catalog.ui.operation.operationReshape"
-             name="Reshape"
+             name="%Reshape"
              targetClass="net.refractions.udig.catalog.IGeoResource">
           <enablement>
              <adaptsTo
