--- a/plugins/net.refractions.udig.mapgraphic/plugin.properties
+++ b/plugins/net.refractions.udig.mapgraphic/plugin.properties
@@ -1,17 +1,29 @@
-plugin.name=Map Graphic Plug-in
-extensionPoint.name=Map Decoration
-renderer.name=Map Decoration Renderer
-extension.name=Map Decoration Service Extension
-mapGraphic.wizardPageName=Map Decoration
-mapGraphic.wizardPageDescription=Add a decoration to the map.
-action.other.name=Other...
-printing.ui.locationStyle.name = Location Style
-printing.ui.scalebar.config.label = Scalebar
-printing.ui.scalebar.mapgraphic.id = Scalebar
+
+action.addgrid.label  = Grid
+action.other.name     = Other...
+action.scalebar.label = Scalebar
+
+extension.name      = Map Decoration Service Extension
+
+extensionPoint.name = Map Decoration
+
+font.style.label = Font
+
+location.tool.name = Location
+
+mapGraphic.wizardPageDescription = Add a decoration to the map.
+mapGraphic.wizardPageName        = Map Decoration
+
+mapgraphic.grid.name       = Grid
+mapgraphic.northarrow.name = North Arrow
+mapgraphic.scaledenom.name = Scale
+
+plugin.name = Map Graphic Plug-in
+
+printing.ui.location.config.label    = Location
+printing.ui.locationStyle.name       = Location Style
+printing.ui.scalebar.config.label    = Scalebar
+printing.ui.scalebar.mapgraphic.id   = Scalebar
 printing.ui.scalebar.mapgraphic.name = Scalebar
-printing.ui.location.config.label = Location
-action.scalebar.label=Scalebar
-mapgraphic.grid.name=Grid
-action.addgrid.label=Grid
-font.style.label=Font
-location.tool.name=Location
+
+renderer.name = Map Decoration Renderer
