commented scale denominator, which wasn't used anyways at the moment, resulting in a broken mapgraphics
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31512 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.mapgraphic/plugin.xml
+++ b/plugins/net.refractions.udig.mapgraphic/plugin.xml
@@ -138,11 +138,11 @@
             id="net.refractions.udig.mapgraphic.NorthArrowMapGraphic"
             name="%mapgraphic.northarrow.name">
       </mapGraphic>
-      <mapGraphic
+    <!--  <mapGraphic
             class="net.refractions.udig.mapgraphic.scalebar.ScaleDenomMapGraphic"
             id="net.refractions.udig.mapgraphic.scalebar.ScaleDenomMapGraphic"
             name="%mapgraphic.scale.name">
-      </mapGraphic>
+      </mapGraphic> -->
    </extension>
    <!--
    <extension
