switch to 2.6-SNAPSHOT
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31517 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -27,5 +27,5 @@ mirror=http://mirrors.ibiblio.org/pub/mirrors/maven2
 
 repo=file:///${user.home}/.m2/repository
 
-geotools.version=2.6.0
+geotools.version=2.6-SNAPSHOT
 geoapi.version=2.3-M1
