--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/gt-postgis-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/postgis-driver-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.7.jar"/>
@@ -28,45 +26,46 @@
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.x/modules/library/main"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/library/jdbc"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.x/modules/library/render/src/main/java"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6.0.jar" sourcepath="/Users/jody/java/geotools/2.6.0/modules/plugin/shapefile/src"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/trunk/modules/library/main/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/2.6.x/modules/library/jdbc"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/2.6.x/modules/plugin/jdbc/jdbc-postgis/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-postgis-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.1.104.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb-1.8.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-arcgrid-1.0.4.jar"/>
@@ -97,11 +96,12 @@
 	<classpathentry exported="true" kind="lib" path="lib/jts-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/picocontainer-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgis-driver-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/vecmath-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ws-commons-util-1.0.1.jar"/>
