Fixes for the runtime preferences, which for some reason were absolutely not working. Seems they were never tested. Workspace, Memory and Language tested.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31530 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/plugin.xml
+++ b/plugins/net.refractions.udig.ui/plugin.xml
@@ -46,7 +46,7 @@
       </page>
       <page
             category="net.refractions.udig.ui.page.general"
-            class="net.refractions.udig.ui.preferences.RunntimePreferences"
+            class="net.refractions.udig.ui.preferences.RuntimePreferences"
             id="net.refractions.udig.ui.runntimepreferences"
             name="%runntimePreferences">
          <keywordReference
