added kml jar to make kml import and export work
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31531 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -119,7 +119,8 @@ bin.includes = library.jar,\
                lib/xmlgraphics-commons-1.2.jar,\
                lib/xmlrpc-client-3.0.jar,\
                lib/xmlrpc-common-3.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/gt-xsd-kml-2.6-SNAPSHOT.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
