added gt-svg to the mix; it dragged in avalon as well but I am not sure why
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31532 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -120,7 +120,10 @@ bin.includes = library.jar,\
                lib/xmlrpc-client-3.0.jar,\
                lib/xmlrpc-common-3.0.jar,\
                lib/xpp3-1.1.3.4.O.jar,\
-               lib/gt-xsd-kml-2.6-SNAPSHOT.jar
+               lib/gt-xsd-kml-2.6-SNAPSHOT.jar,\
+               lib/gt-svg-2.6-SNAPSHOT.jar,\
+               lib/avalon-framework-api-4.3.1.jar,\
+               lib/avalon-framework-impl-4.3.1.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
