--- a/tutorials/net.refractions.udig.tutorials.examples/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.examples/build.properties
@@ -2,8 +2,16 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               src/net/,\
+               icons/
 src.includes = src/,\
                build.properties,\
                .project,\
                .classpath
+bin.excludes = src/net/.svn/,\
+               src/net/refractions/.svn/,\
+               src/net/refractions/udig/.svn/,\
+               src/net/refractions/udig/tutorials/.svn/,\
+               src/net/refractions/udig/tutorials/examples/.svn/,\
+               src/net/refractions/udig/tutorials/examples/internal/.svn/
