--- a/features/net.refractions.udig_sdk-feature/build.properties
+++ b/features/net.refractions.udig_sdk-feature/build.properties
@@ -4,3 +4,5 @@ generate.feature@net.refractions.udig_platform.source=net.refractions.udig_platf
 generate.feature@net.refractions.udig_application.source=net.refractions.udig_application
 generate.feature@net.refractions.udig_printing.source=net.refractions.udig_printing
 generate.feature@net.refractions.udig_sdk.source=net.refractions.udig_sdk
+src.includes = udig-sdk.product,\
+               plugin_customization.ini
