update the build.properties to actually include the src folder
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31538 e5c1c795-43da-0310-a71f-fac65c449510

--- a/tutorials/net.refractions.udig.tutorials.customapp/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.customapp/build.properties
@@ -1,14 +1,9 @@
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/,\
+               plugin_customization.ini,\
                nl/,\
-               plugin_customization.ini
-bin.excludes = icons/.svn/,\
-               icons/obj16/.svn/,\
-               icons/wizban/.svn/,\
-               nl/.svn/,\
-               nl/en/.svn/
+               icons/
 src.includes = src/,\
                custom.product,\
                .project,\
