--- a/tutorials/net.refractions.udig.tutorials.mapgraphic/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.mapgraphic/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/
 src.includes = src/,\
-               build.properties
+               build.properties,\
+               .project,\
+               .classpath
