--- a/tutorials/net.refractions.udig.tutorials.raster/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.raster/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml
-src.includes = src/
+src.includes = src/,\
+               build.properties,\
+               .project,\
+               .classpath
