--- a/tutorials/net.refractions.udig.tutorials.rcp/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.rcp/build.properties
@@ -6,3 +6,7 @@ bin.includes = plugin.xml,\
                icons/,\
                product_lg.gif,\
                splash.bmp
+src.includes = src/,\
+               build.properties,\
+               .project,\
+               .classpath
