--- a/tutorials/net.refractions.udig.tests.tutorials.tests/build.properties
+++ b/tutorials/net.refractions.udig.tests.tutorials.tests/build.properties
@@ -3,3 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                cities.csv
+src.includes = .classpath,\
+               .project,\
+               build.properties,\
+               src/
