--- a/tutorials/net.refractions.udig.tutorials.catalog.csv/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.catalog.csv/build.properties
@@ -4,3 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                cities.csv
+src.includes = src/,\
+               build.properties,\
+               .project,\
+               .classpath
