--- a/tutorials/net.refractions.udig.tutorials.genericprojectelement/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.genericprojectelement/build.properties
@@ -3,4 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/obj/object_obj.gif
+               icons/
+src.includes = .project,\
+               .classpath,\
+               build.properties,\
+               src/
