--- a/tutorials/net.refractions.udig.tutorials.tracking/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.tracking/build.properties
@@ -4,7 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/
-bin.excludes = icons/.svn/,\
-               icons/etool16/.svn/
 src.includes = build.properties,\
-               src/
+               src/,\
+               .project,\
+               .classpath
