--- a/tutorials/net.refractions.udig.tutorials.workbench/build.properties
+++ b/tutorials/net.refractions.udig.tutorials.workbench/build.properties
@@ -2,4 +2,10 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               src/,\
+               icons/
+src.includes = src/,\
+               build.properties,\
+               .project,\
+               .classpath
