fixed up info tool and added mapgraphic docs
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31548 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui.editor/build.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/build.properties
@@ -10,3 +10,5 @@ bin.includes = META-INF/,\
                plugin_ko.properties,\
                plugin.properties,\
                icons/
+src.includes = build.properties,\
+               src/
