--- a/plugins/net.refractions.udig/plugin.xml
+++ b/plugins/net.refractions.udig/plugin.xml
@@ -7,10 +7,10 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="net.refractions.udig.ui.application"
-            name="uDig SDK">
+            name="%product.name">
          <property
                name="windowImages"
-               value="icons/icon16.gif,icons/icon32.gif,icons/icon64.gif,icons/icon128.gif">
+               value="icons/icon16.gif,icons/icon32.gif,icons/icon48.gif,icons/icon64.gif,icons/icon128.gif">
          </property>
          <property
                name="aboutText"
@@ -31,6 +31,14 @@
          <property
                name="startupMessageRect"
                value="7,180,445,16">
+         </property>
+         <property
+               name="appName"
+               value="%product.name">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
