removing the jai-tools fetching from the libs plugin, since the fetching mechanism from the jai-tools project side is not stable by now. We have too many error possibilities.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31556 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -8,10 +8,7 @@ bin.includes = library.jar,\
                LICENSE.txt,\
                plugin_ko.properties,\
                epsg.properties,\
-               lib/,\
-               lib/jiffle-1.0-SNAPSHOT.jar,\
-               lib/utils-1.0-SNAPSHOT.jar,\
-               lib/zonalstats-1.0-SNAPSHOT.jar
+               lib/
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
