adding back opendap with proper maven repo
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31563 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -8,7 +8,8 @@ bin.includes = library.jar,\
                LICENSE.txt,\
                plugin_ko.properties,\
                epsg.properties,\
-               lib/
+               lib/,\
+               lib/opendap-2.1.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
