--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -8,6 +8,7 @@ updateStableURL=http://download.osgeo.org/webdav/geotools
 updateSnapshotURL=http://repo.opengeo.org
 
 jaitoolsmaven=http://oss.sonatype.org/content/repositories/snapshots/
+geosolutionsmaven=http://mvn.geo-solutions.it/
 
 # older update url from refractions
 # updateURL=http://lists.refractions.net/m2
