path to local maven repository is not an URL, it is just a plain file path
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31565 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -16,19 +16,17 @@ geosolutionsmaven=http://mvn.geo-solutions.it/
 # Ibiblio Mirrors used to fetch Apache jars
 # (and several other open source projects)
 #
-# Official (http://repo1.maven.org/maven2)
-
-#mirror=http://repo1.maven.org/maven2
-
+# Official = Central (http://repo1.maven.org/maven2)
+# for official mirrors see: http://docs.codehaus.org/display/MAVENUSER/Mirrors+Repositories
 mirror=http://mirrors.ibiblio.org/pub/mirrors/maven2
 
-# mirror=http://ftp.cica.es/mirrors/maven2
+mirror1=http://ftp.cica.es/mirrors/maven2
 # mirror=ftp://ibiblio.org/pub/packages/maven2
 # mirror=http://ibiblio.lsu.edu/main/pub/packages/maven2
 
-# Your local repository
-
-repo=file:///${user.home}/.m2/repository
+# Your local repository (just absolute file path, NOT URL! see: http://maven.apache.org/ant-tasks/reference.html#localRepository)
+repo=${user.home}/.m2/repository
+#repo=D:/Projects/maven/repository
 
 geotools.version=2.6-SNAPSHOT
 geoapi.version=2.3-M1
