language featuers now includes babel translations
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31569 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig/plugin.xml
+++ b/plugins/net.refractions.udig/plugin.xml
@@ -7,10 +7,10 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="net.refractions.udig.ui.application"
-            name="%product.name">
+            name="uDig SDK">
          <property
                name="windowImages"
-               value="icons/icon16.gif,icons/icon32.gif,icons/icon48.gif,icons/icon64.gif,icons/icon128.gif">
+               value="icons/icon16.gif,icons/icon32.gif,icons/icon64.gif,icons/icon128.gif">
          </property>
          <property
                name="aboutText"
@@ -34,7 +34,7 @@
          </property>
          <property
                name="appName"
-               value="%product.name">
+               value="uDig SDK">
          </property>
          <property
                name="preferenceCustomization"
