Make use of Batik as provided by Eclipse
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31578 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs.source/build.properties
+++ b/plugins/net.refractions.udig.libs.source/build.properties
@@ -1,4 +1,9 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               src/
+               lib/
 jars.compile.order = 
+src.includes = refresh.xml,\
+               build.properties,\
+               dest.properties,\
+               src/,\
+               util/
