--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,82 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/opendap-2.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-api-4.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-impl-4.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-css-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-dom-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-ext-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-gvt-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-parser-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-script-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-svg-dom-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-svggen-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-transcoder-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-util-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/batik-xml-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-dbcp-1.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-jxpath-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.5.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/eastwood-1.1.1-20090908.053756-6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/fop-0.94.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jp2k-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-svg-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-kml-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jp2k-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-svg-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-temporal-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-kml-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.1.104.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb-1.8.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-arcgrid-1.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdal-bindings-1.4.5b.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdaldted-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalecw-1.0.5.jar"/>
@@ -88,10 +68,14 @@
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalmrsid-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalmrsidjp2-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-gdalnitf-1.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-imagereadmt-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-kakadu-1.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-kakadujni-5.2.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-tiff-1.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
@@ -103,28 +87,25 @@
 	<classpathentry exported="true" kind="lib" path="lib/jts-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/netcdf-java-4.0.41.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opendap-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/vecmath-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ws-commons-util-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xalan-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xmlgraphics-commons-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xml-apis-1.3.04.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xml-apis-xerces-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-client-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-common-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.3.4.O.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-temporal-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/netcdf-java-4.0.41.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
